# trio-retina

./: .gitignore  .pre-commit-config.yaml  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  cli.md  concepts.md  cookbook.md  design.md  extend.md  faq.md  index.md  spec.md
examples/: any_model.py  autotune.py  autotune_oracle.py  bench_overhead.py  dino_embeddings.py  from_supervision.py  gate_savings.py  latent_vec.py  pipeline_compose.py  quickstart.py  rtsp_to_webhook.py  sample_events.jsonl  three_apps.py  workflow.json  yolo_video.py
examples/forecast/: README.md  dynamics.ckpt  dynamics.py  export_trajectories.py  forecast_video.py  multi_consumer.py  quick_forecast.py  render_demo.py  train_dynamics.py
examples/itwin/: README.md  export_events.py  retina_events.json
examples/itwin/render/: export_geometry.mjs  overlay_twin.py  render_base.mjs
examples/itwin/viewer/: README.md
examples/itwin/viewer/src/: RetinaDecorator.ts  registerRetinaDecorator.ts
examples/world_model/: benchmark.py  dataset.py  dynamics.py  dynamics_model.py  end_to_end.py  latent_dynamics.py  make_demo_gif.py  make_hero_gif.py  make_seam_png.py  multi_encoder.py
examples/world_model/csi/: README.md  csi_data.py  csi_dynamics.py  csi_state.py  test_csi_demo.py  train_csi.py
examples/world_model/soccer/: dynamics_soccer.py  record.py  render_split.py  train_and_render.py
examples/world_model/soccer/passmap/: .gitignore  README.md  passes.py  record_passmap.py  render_passmap.py
examples/world_model/traffic/: README.md  calib.example.json  homography.py  record_traffic.py  render_traffic.py  speed.py  synthetic_traffic.py  test_traffic_demo.py
media/: social.html  stack.html
notebooks/: 01_quickstart_events.ipynb  02_camera_to_webhook.ipynb  03_from_supervision.ipynb  README.md
retina/: __init__.py  assets.py  cli.py  compose.py  detect.py  embed.py  eval.py  event.schema.json  events.py  export.py  gates.py  geometry.py  nodes.py  pipeline.py  rules.py  schema.py  sources.py  track.py  worldstate.py  zones.py
tests/: test_assets.py  test_cli.py  test_detectors_schema.py  test_embed.py  test_export.py  test_gates.py  test_geometry.py  test_newfeatures.py  test_pipeline.py  test_pipeline_fromjson.py  test_repr.py  test_rules.py  test_schema_vec.py  test_sources.py  test_track.py  test_world_model.py  test_worldstate.py
