[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retina-sdk"
version = "0.0.3"
description = "The model-agnostic state layer for world models: turn any perception model's output into a standard, queryable world-state (symbolic events + latent)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "MachineFi Labs" }]
keywords = ["computer-vision", "world-model", "perception", "events", "state", "tracking", "edge-ai"]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
norfair = ["norfair>=2.2"]
grounding = ["transformers>=4.40", "torch>=2.0", "pillow>=10"]
video = ["opencv-python>=4.8"]
all = ["ultralytics>=8.3", "norfair>=2.2", "opencv-python>=4.8"]
dev = ["pytest>=8", "ruff>=0.6", "norfair>=2.2"]

[project.urls]
Homepage = "https://github.com/raullenchai/trio-retina"
Source = "https://github.com/raullenchai/trio-retina"

[tool.hatch.build.targets.wheel]
packages = ["retina"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
