[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retina-sdk"
version = "0.0.3"
description = "The model-agnostic state layer for world models: turn any perception model's output into a standard, queryable world-state (symbolic events + latent)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "MachineFi Labs" }]
keywords = ["computer-vision", "world-model", "perception", "events", "state", "tracking", "edge-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
norfair = ["norfair>=2.2"]
grounding = ["transformers>=4.40", "torch>=2.0", "pillow>=10"]
video = ["opencv-python>=4.8"]
all = ["ultralytics>=8.3", "norfair>=2.2", "opencv-python>=4.8"]
dev = ["pytest>=8", "ruff>=0.6", "norfair>=2.2"]

[project.urls]
Homepage = "https://github.com/raullenchai/trio-retina"
Source = "https://github.com/raullenchai/trio-retina"

[tool.hatch.build.targets.wheel]
packages = ["retina"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B),
# flake8-comprehensions (C4). Line length is enforced by the formatter, so E501
# is left to `ruff format` rather than failing the linter.
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing style in frozen modules; the rules stay active for new files.
"retina/nodes.py" = ["UP037"]
"retina/pipeline.py" = ["UP037"]
"retina/detect.py" = ["B905"]
"retina/track.py" = ["B007"]
"examples/*" = ["I001"]
"tests/*" = ["I001"]
