[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trio-retina"
version = "0.2.0"
description = "Model-agnostic computer-vision pipeline: turn any detector (YOLO, VLM, Grounding DINO) into structured tracking events — zone intrusion, line-crossing, dwell, counting — over video or RTSP. The state layer for world models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "MachineFi Labs" }]
keywords = [
    "computer-vision", "object-tracking", "object-detection", "video-analytics",
    "yolo", "ultralytics", "vlm", "grounding-dino", "rtsp", "opencv",
    "perception", "edge-ai", "event-driven", "zone-intrusion", "line-crossing",
    "people-counting", "world-model", "digital-twin", "vision-pipeline",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
yolo = ["ultralytics>=8.3"]
norfair = ["norfair>=2.2"]
grounding = ["transformers>=4.40", "torch>=2.0", "pillow>=10"]
video = ["opencv-python>=4.8"]
all = ["ultralytics>=8.3", "norfair>=2.2", "opencv-python>=4.8", "transformers>=4.40", "torch>=2.0", "pillow>=10"]
dev = ["pytest>=8", "ruff>=0.6", "norfair>=2.2"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]

[project.urls]
Homepage = "https://github.com/machinefi/trio-retina"
Source = "https://github.com/machinefi/trio-retina"
Documentation = "https://github.com/machinefi/trio-retina#readme"
Issues = "https://github.com/machinefi/trio-retina/issues"
Changelog = "https://github.com/machinefi/trio-retina/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["retina"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Import `retina` straight from the source tree, so `pytest` works on a bare
# checkout (just `pip install numpy pytest`) with no editable install needed.
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), flake8-bugbear (B),
# flake8-comprehensions (C4). Line length is enforced by the formatter, so E501
# is left to `ruff format` rather than failing the linter.
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Pre-existing style in frozen modules; the rules stay active for new files.
"retina/nodes.py" = ["UP037"]
"retina/pipeline.py" = ["UP037"]
"retina/detect.py" = ["B905"]
"retina/track.py" = ["B007"]
"examples/*" = ["I001"]
"tests/*" = ["I001"]
